--- a/JM Spring Boot/src/main/resources/templates/new.html
+++ b/JM Spring Boot/src/main/resources/templates/new.html
@@ -6,17 +6,26 @@
 </head>
 <body>
 <form th:method="POST" th:action="@{/users}" th:object="${user}">
-    <label for="name">Enter Name: </label>
-    <input type="text" th:field="*{name}" id="name">
-    <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
+    <label for="firstName">Enter FirstName: </label>
+    <input type="text" th:field="*{firstName}" id="firstName">
+    <div style="color: red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Name error</div>
+
+    <label for="lastName">Enter LastName: </label>
+    <input type="text" th:field="*{lastName}" id="lastName">
+    <div style="color: red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Name error</div>
+
+    <label for="age">Enter Age: </label>
+    <input type="text" th:field="*{age}" id="age">
+    <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Name error</div>
+
+    <label for="email">Enter Email: </label>
+    <input type="text" th:field="*{email}" id="email">
+    <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name error</div>
 
     <label for="password">Enter Password: </label>
     <input type="text" th:field="*{password}" id="password">
     <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Name error</div>
 
-<!--    <label for="age">Enter Age: </label>-->
-<!--    <input type="text" th:field="*{age}" id="age">-->
-<!--    <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Name error</div>-->
     <br/>
     <input type="submit" value="Create!"/>
 </form>
