--- a/JM Spring Boot/src/main/resources/templates/user.html
+++ b/JM Spring Boot/src/main/resources/templates/user.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <p th:text="${user.getId()}">VALUE</p>
-<p th:text="${user.getName()}">VALUE</p>
+<p th:text="${user.getFirstName()}">VALUE</p>
+<p th:text="${user.getLastName()}">VALUE</p>
+<p th:text="${user.getAge()}">VALUE</p>
+<p th:text="${user.getEmail()}">VALUE</p>
 <a th:href="@{/logout}">Logout</a>
 </form>
 </body>
