--- a/JM Spring Boot/src/main/resources/templates/userForAdmin.html
+++ b/JM Spring Boot/src/main/resources/templates/userForAdmin.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <p th:text="${user.getId()}">VALUE</p>
-<p th:text="${user.getName()}">VALUE</p>
+<p th:text="${user.getFirstName()}">VALUE</p>
+<p th:text="${user.getLastName()}">VALUE</p>
+<p th:text="${user.getAge()}">VALUE</p>
+<p th:text="${user.getEmail()}">VALUE</p>
 <p th:text="${user.getPassword()}">VALUE</p>
 <p th:text="${user.getRoles()}">VALUE</p>
 <a th:href="@{/users/{id}/edit(id=${user.getId()})}">Edit</a>
